<resources>
    <string name="app_name">Banking Demo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Main Menu -->
    <string name="home_menu">Home</string>
    <string name="transfer_pay_menu">Transfer &amp; Pay</string>
    <string name="account_services_menu">Account Services</string>
    <string name="my_profile_menu">My Profile</string>
    <string name="notifications_menu">Notifications</string>
    <string name="chat_support_menu">Chat with Support</string>
    <string name="settings_menu">Settings</string>

    <!-- Support and Chat -->
    <string name="support_enter_message">Enter Message</string>
    <string name="chat_support_team">Support Team</string>
    <string name="chat_you">You</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
