<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/obe_ic_home"
            android:title="@string/home_menu" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transfer"
            android:icon="@drawable/obe_ic_transfer"
            android:title="@string/transfer_pay_menu" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/obe_ic_account"
            android:title="@string/account_services_menu" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/obe_ic_profile"
            android:title="@string/my_profile_menu" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/obe_ic_notifications"
            android:title="@string/notifications_menu" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/obe_ic_chat"
                android:title="@string/chat_support_menu" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/obe_ic_settings"
                android:title="@string/settings_menu" />
        </menu>
    </item>
</menu>